--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-forms/apptype-insurance/apptype-insurance.component.html
@@ -252,7 +252,7 @@
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.Unsure">
                   <br/>You must provide the insurance payout documentation from your insurance broker showing what was covered by your insurance provider. The DFA Program won't be
-                  able to proceed with your applicaton until this information is provided.<br/><br/>
+                  able to confirm eligibility until this information is provided.<br/><br/>
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.No">
                   <br/>I/We declare that we carry no insurance (no fire, theft or liability) on the property listed on this Disaster Financial Assistance application. If I am later
