--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application/dfa-application.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application/dfa-application.component.scss
@@ -1,5 +1,7 @@
 .save-button {
-    width: 100%;
+    width: 120px;
+    height:40px !important;
+    vertical-align: middle;
 }
 
 @media screen and (max-width: 768px) {
