--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-forms/apptype-insurance/apptype-insurance.component.html
@@ -245,13 +245,13 @@
                 </mat-radio-button>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.controls.insuranceOption.value === option.key && option.value === radioInsuranceOptions.Yes">
                   <br/>
-                  Insurable damages in the private sector aren’t <a href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/124_95#Schedule1" target="_blank">eligible</a>.
+                  Insurable damages in the private sector aren’t eligible.
                   <br/><br/>
                   To determine if your damages are insurable or uninsurable, contact your insurance provider as a first step. They will provide you with information about your insurance coverage.<br/><br/>
                   <b>Program staff are available to discuss how your insurance relates to your eligibility and application. Please call <span style="white-space: nowrap; font-weight: bold;">1-888-257-4777.</span></b><br/><br/>
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.Unsure">
-                  <br/>You must provide the insurance payout documentation from your insurance broker showing what was covered by your insurance provider. The DFA Program won't be
+                  <br/>You must provide insurance payout documentation from your insurance broker showing what was covered by your insurance provider. The DFA Program won't be
                   able to confirm eligibility until this information is provided.<br/><br/>
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.No">
