--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-forms/consent/consent.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-forms/consent/consent.component.html
@@ -12,7 +12,7 @@
 
         <div class="row">
           <p style="font-size: 15px">
-            Personal information on this form is collected by Ministry of Emergency Management and Climate Readiness under section 26(c) and 27(1)(a) and (b) of the
+            Personal information on this form is collected by the Ministry of Emergency Management and Climate Readiness under section 26(c) and 27(1)(a) and (b) of the
             Freedom of Information and Protection of Privacy Act (FOIPPA). The information will be used to evaluate your pre, and post-disaster circumstances to determine
             eligibility for Disaster Financial Assistance. If you have any questions about the collection of this information, contact 1-888-257-4777 or DFA.Private@gov.bc.ca.
           </p>
@@ -28,11 +28,11 @@
 
         <div class="row">
           <p style="font-size: 15px">
-            Ministry of Emergency Management and Climate Readiness may disclose the information on this form to other relief organizations, indigenous governing bodies,
+            The Ministry of Emergency Management and Climate Readiness may disclose the information on this form to other relief organizations, indigenous governing bodies,
             and governments that are offering any assistance whatsoever as a result of this disaster. The Ministry of Emergency Management and
             Climate Readiness (or its agent) may disclose information to, or collect information from, other Provincial Government Ministries and Crown Corporations, as permitted by
             FOIPPA, to verify that the information provided on this form is accurate. Specifically, I/we authorize BC Assessment to provide representatives from
-            Ministry of Emergency Management and Climate Readiness with confidential information about my/our property. This information will assist Ministry of Emergency
+            the Ministry of Emergency Management and Climate Readiness with confidential information about my/our property. This information will assist the Ministry of Emergency
             Management and Climate Readiness in assessing damages from the recent authorized DFA event. Personal information is protected from unauthorized use and disclosure
             in accordance with the Freedom of Information and Protection of Privacy Act and may be disclosed only as provided by that Act.
           </p>
@@ -51,27 +51,6 @@
             Information collected on this application form may be viewable by Disaster Financial Assistance Staff whether the application has been submitted or not.
           </p>
         </div>
-
-        <br />
-
-        <div class="row">
-          <div class="col-md-12">
-            <p class="sub-heading">Declaration</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <p style="font-size: 15px">
-            I/We do solemnly declare that the foregoing representative statements are to the best of my/our knowledge, information and belief,
-            true in every particular detail, and I/we make this solemn declaration conscientiously, believing it to be true and knowing that it is of the same
-            force and effect as if made under oath and by virtue of the Canada Evidence Act.
-          </p>
-          <p style="font-size: 15px">
-            I/We understand that by completing and submitting this application I/we are confirming that any funds recovered through civil litigation
-            or other sources that are attributable to eligible expenses, up to a maximum amount of what I/we have receive under DFA for those expenses, must be repaid to the Province.
-          </p>
-        </div>
-
         <br />
 
       </ng-container>
