--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/damaged-property-address/damaged-property-address.component.html
@@ -3,11 +3,12 @@
 
     <form [formGroup]="damagedPropertyAddressForm">
 
+      <p class="sub-heading" style="font-size: 20px">Damaged Property</p>
+      <br/>
+
       <ng-container>
         <div class="row">
           <div class="col-md-12 bottomspace">
-            <mat-label class="sub-heading">Damaged Property</mat-label>
-            <br /><br/>
             <p class="sub-heading" style="font-size: 15px">
               Is the damaged property address the same as the primary address that you listed on your profile?<span style="color:red" >*</span>
             </p>
