--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/property-damage/property-damage.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/property-damage/property-damage.component.html
@@ -2,6 +2,8 @@
   <mat-card-content>
 
     <form [formGroup]="propertyDamageForm">
+      <p class="sub-heading" style="font-size: 20px">Cause of Damage</p>
+      <br/>
 
       <ng-container>
         <div class="row">
