--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/occupants/occupants.component.html
@@ -3,14 +3,46 @@
 
     <form [formGroup]="occupantsForm">
 
-      <ng-container>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="sub-heading">Under Construction</p>
-          </div>
-        </div>
+      <p class="sub-heading" style="font-size: 20px">Occupants, Applicants and Contacts</p>
+      <br />
 
-      </ng-container>
+      <div formGroupName="fullTimeOccupants">
+        <ng-container>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="sub-heading">
+                <b>Full-time Occupants<span style="color:red" >*</span></b>
+              </p>
+              <p class="sub-heading" style="font-size: 15px">
+                Add the name of all full-time occupants who lived in your home at the time of the event. Don't include tenants. If you were the only occupant living at the residence, please fill in your own name.<span style="color:red" >*</span>
+              </p>
+            </div>
+          </div>
+
+        </ng-container>
+
+      </div>
+
+      <div formGroupName="otherContacts">
+        <ng-container>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="sub-heading">Under Construction</p>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+
+      <div formGroupName="secondaryApplicants">
+        <ng-container>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="sub-heading">Under Construction</p>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+
     </form>
 
   </mat-card-content>
