--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.scss
@@ -12,3 +12,10 @@ mat-form-field {
 .custom-mat-error {
   padding-top: 3px;
 }
+
+.nameMessage {
+  border: 2px solid lightgrey;
+  font-weight: bold;
+  color: #169bd5;
+  padding: 10px;
+}
