--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.html
@@ -11,7 +11,7 @@
               matInput
               placeholder="First Name"
               required
-              [readonly]="disableFields"
+              readonly
             />
             <mat-error
               *ngIf="
@@ -21,6 +21,15 @@
               >First Name is required</mat-error
             >
           </mat-form-field>
+        </div>
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-5 nameMessage" style="">
+          This is your legal name from your BC Services Card and can't be changed.
+          If you need to update your legal name, visit
+          <br />
+          <a target="_blank" style="" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+          
         </div>
       </div>
 
@@ -33,7 +42,7 @@
               matInput
               placeholder="Last Name"
               required
-              [readonly]="disableFields"
+              readonly
             />
             <mat-error
               *ngIf="
@@ -62,12 +71,11 @@
 
       <div class="row">
         <div class="col-md-6 bottomspace">
-          <mat-label class="card-heading">Are you an Indigenous person? <span style="color:red">*</span> (First Nation, Inuit, or Metis)</mat-label>
+          <mat-label class="card-heading">Are you an Indigenous person? (First Nation, Inuit, or Metis)</mat-label>
           <br />
           <mat-radio-group
-            formControlName="isIndigenous"
+            formControlName="indigenousStatus"
             class="primary-radio-group"
-            required
             aria-label="Select an option">
              
            
@@ -78,16 +86,16 @@
               >
                 {{ option }}
               </mat-radio-button>
-             <mat-error
+             <!--<mat-error
               class="custom-mat-error"
               *ngIf="
-                personalFormControl?.isIndigenous?.touched &&
-                personalFormControl?.isIndigenous?.invalid &&
-                personalFormControl?.isIndigenous?.hasError('required')
+                personalFormControl?.indigenousStatus?.touched &&
+                personalFormControl?.indigenousStatus?.invalid &&
+                personalFormControl?.indigenousStatus?.hasError('required')
               "
             >
               This is required</mat-error
-            >
+            >-->
           </mat-radio-group>
         </div>
       </div>
