--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/occupants/occupants.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/occupants/occupants.component.scss
@@ -2,6 +2,10 @@ mat-form-field {
     width: 100%;
 }
 
+// .mat-form-field + .mat-form-field {
+//   margin-left: 8px;
+// }
+
 .primary-radio-group {
     display: flex;
     flex-direction: column;
@@ -15,4 +19,77 @@ mat-form-field {
 .highlight {
     font-weight: 700;
     color: #169bd5;
+}
+
+.mat-header-cell {
+  font-weight: 700;
+  font-size: 15px;
+  color: black;
+  height: 51px;
+}
+
+.example-element-row {
+  height: 51px !important;
+  border: 1px solid;
+  border-color: rgb(204, 204, 204);
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+
+
+.details-button {
+  width: 100%;
+}
+
+.family-button {
+  border: 2px solid #169bd5 !important;
+  color: #169bd5;
+  background-color: #ffffff !important;
+}
+
+.save-button {
+  height: 55px;
+}
+
+table {
+  width: 99.99%;
+  box-shadow: none;
+}
+
+.mat-table {
+  overflow: auto;
+  width: 100%;
+  max-height: 500px;
+}
+
+
+.delete-image img:last-child {
+  display: none;
+}
+
+.delete-image:hover img:last-child {
+  display: block;
+}
+
+.delete-image:hover img:first-child {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .mobile-label {
+    width: 80px;
+    display: inline-block;
+    font-weight: bold;
+  }
+}
+
+.services-info {
+  background-color: #fcba19;
+  border-color: #fcba19;
+  margin: 7px;
+  padding: 15px;
 }
