--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/occupants/occupants.component.html
@@ -19,7 +19,7 @@
 
               <table mat-table [dataSource]="fullTimeOccupantsDataSource" *ngIf="fullTimeOccupantsDataSource.getValue().length > 0">
                 <!-- Name Column -->
-                <ng-container matColumnDef="name" style="width:20%">
+                <ng-container matColumnDef="name" style="width:40%">
                   <th mat-header-cell *matHeaderCellDef >
                     <b>Name</b>
                   </th>
@@ -29,7 +29,7 @@
                 </ng-container>
 
                 <!-- Relationship Column -->
-                <ng-container matColumnDef="relationship" style="width:20%">
+                <ng-container matColumnDef="relationship" style="width:40%">
                   <th mat-header-cell *matHeaderCellDef>
                     <b>Relationship</b>
                   </th>
@@ -180,6 +180,16 @@
               </p>
 
               <table mat-table [dataSource]="secondaryApplicantsDataSource" *ngIf="secondaryApplicantsDataSource.getValue().length > 0">
+                <!-- Applicant Type Column -->
+                <ng-container matColumnDef="applicantType" style="width:20%">
+                  <th mat-header-cell *matHeaderCellDef >
+                    <b>Type</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.secondaryApplicantType }}
+                  </td>
+                </ng-container>
+
                 <!-- Name Column -->
                 <ng-container matColumnDef="name" style="width:20%">
                   <th mat-header-cell *matHeaderCellDef >
@@ -260,10 +270,28 @@
                   New secondary applicant
                 </p>
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-2">
                     <mat-form-field appearance="outline">
-                      <mat-label>Applicant first name</mat-label>
-                      <input formControlName="firstName" matInput placeholder="Applicant first name" required/>
+                      <mat-label>Applicant type</mat-label>
+                      <mat-select formControlName="secondaryApplicantType" required>
+                        <mat-option [value]="selectApplicantTypeOptions.Contact">{{ selectApplicantTypeOptions.Contact }}</mat-option>
+                        <mat-option [value]="selectApplicantTypeOptions.Organization">{{ selectApplicantTypeOptions.Organization }}</mat-option>
+                      </mat-select>
+                      <mat-error
+                        *ngIf="
+                          occupantsForm.get('secondaryApplicant').controls.secondaryApplicantType.invalid &&
+                          occupantsForm.get('secondaryApplicant').controls.secondaryApplicantType.hasError('required') &&
+                          occupantsForm.get('secondaryApplicant').controls.secondaryApplicantType.touched
+                        "
+                      >
+                        Applicant type is required</mat-error
+                      >
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-2">
+                    <mat-form-field appearance="outline">
+                      <mat-label>First name</mat-label>
+                      <input formControlName="firstName" matInput placeholder="First name" required/>
                       <mat-error
                         *ngIf="
                           occupantsForm.get('secondaryApplicant').controls.firstName.invalid &&
@@ -275,10 +303,10 @@
                       >
                     </mat-form-field>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-2">
                     <mat-form-field appearance="outline">
-                      <mat-label>Applicant last name</mat-label>
-                      <input formControlName="lastName" matInput placeholder="Applicant last name" required/>
+                      <mat-label>Last name</mat-label>
+                      <input formControlName="lastName" matInput placeholder="Last name" required/>
                       <mat-error
                         *ngIf="
                           occupantsForm.get('secondaryApplicant').controls.lastName.invalid &&
@@ -290,11 +318,11 @@
                       >
                     </mat-form-field>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-2">
                     <mat-form-field appearance="outline">
                       <mat-label>Applicant phone</mat-label>
                       <input formControlName="phoneNumber"
-                        matInput
+                        matInput required
                         placeholder="Applicant phone"
                         [textMask]="{ mask: phoneMask, keepCharPositions: true }" />
                       <mat-error
@@ -310,7 +338,7 @@
                   <div class="col-md-3">
                     <mat-form-field appearance="outline">
                       <mat-label>Applicant contact email</mat-label>
-                      <input formControlName="email" matInput placeholder="Applicant contact email" />
+                      <input formControlName="email" matInput placeholder="Applicant contact email" required/>
                       <mat-error
                       *ngIf="
                         occupantsForm.get('secondaryApplicant').controls.email.invalid
@@ -347,8 +375,6 @@
                 </div>
 
               </mat-card>
-
-
             </div>
           </div>
         </ng-container>
@@ -368,7 +394,7 @@
 
               <table mat-table [dataSource]="otherContactsDataSource" *ngIf="otherContactsDataSource.getValue().length > 0">
                 <!-- Name Column -->
-                <ng-container matColumnDef="name" style="width:20%">
+                <ng-container matColumnDef="name" style="width:26%">
                   <th mat-header-cell *matHeaderCellDef >
                     <b>Name</b>
                   </th>
@@ -378,7 +404,7 @@
                 </ng-container>
 
                 <!-- Phone Column -->
-                <ng-container matColumnDef="phoneNumber" style="width:20%">
+                <ng-container matColumnDef="phoneNumber" style="width:27%">
                   <th mat-header-cell *matHeaderCellDef>
                     <b>Phone</b>
                   </th>
@@ -388,7 +414,7 @@
                 </ng-container>
 
                 <!-- Email Column -->
-                <ng-container matColumnDef="email" style="width:20%">
+                <ng-container matColumnDef="email" style="width:27%">
                   <th mat-header-cell *matHeaderCellDef>
                     <b>Email</b>
                   </th>
@@ -535,7 +561,7 @@
                       class="button-s details-button"
                       mat-button
                       type="button"
-                      (click)="cancelOtherContacts()"
+                      (click)="cancelOtherContact()"
                     >
                       Cancel
                     </button>
