--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/address/address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/address/address.component.html
@@ -53,6 +53,7 @@
         <div class="col-md-12">
           <app-bc-address
             [addressForm]="primaryAddressFormControl?.address"
+            [primaryAddressWarning]="true"
           ></app-bc-address>
         </div>
       </div>
@@ -161,7 +162,7 @@
         <div class="col-md-12">
           <label
             id="isNewMailingAddress-radio-group-label"
-            
+
             >Is the address you are currently using the same as your primary address above?</label
           >
           <mat-radio-group
